--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,8 +1,10 @@
-[env:nodemcuv2]
+[env:seeed_xiao_esp32s3]
 platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
 lib_deps =
   DFRobot_MAX30102
-  ESP8266WiFi
+  adafruit/Adafruit MPU6050 @ ^2.2.0
+  WiFi
 monitor_speed = 115200
+upload_speed = 115200
