--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -6,5 +6,6 @@ lib_deps =
   DFRobot_MAX30102
   adafruit/Adafruit MPU6050 @ ^2.2.0
   WiFi
-monitor_speed = 115200
-upload_speed = 115200
+monitor_speed = 921600
+upload_speed = 921600
+build_flags = -D
